Adapted to the new repository tree organization

--- a/SquiLu-editor/editor.cbp
+++ b/SquiLu-editor/editor.cbp
@@ -17,7 +17,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="editor" prefix_auto="1" extension_auto="1" />
-				<Option object_output="/home/mingo/dev/fltk-1.3.x-r9811/test/.objs" />
+				<Option object_output="objs" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -64,16 +64,18 @@
 			<Add option="-DPDF_USING_ZLIB=1" />
 			<Add option="-DRS232_STATIC=1" />
 			<Add directory="../../dadbiz++/third-party/fltk" />
-			<Add directory="../include" />
-			<Add directory="../ext/myaxtls" />
-			<Add directory="../sqstdlib" />
-			<Add directory="../ext" />
+			<Add directory="../SquiLu/include" />
+			<Add directory="../myaxtls" />
+			<Add directory="../SquiLu/sqstdlib" />
+			<Add directory="../SquiLu-ext" />
 			<Add directory="../../dadbiz++/third-party/sqlite3" />
 			<Add directory="../../zeromq-3.2.2/include" />
 			<Add directory="../../dadbiz++/third-party/flu" />
 			<Add directory="../../dadbiz++/third-party/libharu/include" />
 			<Add directory="../../dadbiz++/third-party/discount-2.1.2" />
 			<Add directory="/usr/include/postgresql" />
+			<Add directory="../SquiLu-editor" />
+			<Add directory=".." />
 		</Compiler>
 		<Linker>
 			<Add library="fltk_images" />
@@ -95,103 +97,101 @@
 			<Add library="hpdfs" />
 			<Add library="discount" />
 			<Add directory="../../dadbiz++/third-party/fltk/lib" />
-			<Add directory="../ext/mpdecimal" />
-			<Add directory="../ext/myaxtls" />
+			<Add directory="../mpdecimal" />
+			<Add directory="../myaxtls" />
 			<Add directory="../../zeromq-3.2.2" />
 			<Add directory="../../dadbiz++/third-party/flu" />
 			<Add directory="../../dadbiz++/third-party/libharu/src" />
 			<Add directory="../../dadbiz++/third-party/discount-2.1.2" />
 		</Linker>
 		<Unit filename="editor.cxx" />
-		<Unit filename="../ext/dynamic_library.cpp" />
-		<Unit filename="../ext/dynamic_library.h" />
-		<Unit filename="../ext/fpdf.cpp" />
-		<Unit filename="../ext/fpdf.h" />
-		<Unit filename="../ext/lua_socket.cpp" />
-		<Unit filename="../ext/lua_socket.h" />
-		<Unit filename="../ext/mongoose.c">
+		<Unit filename="../SquiLu-ext/dynamic_library.cpp" />
+		<Unit filename="../SquiLu-ext/dynamic_library.h" />
+		<Unit filename="../SquiLu-ext/fpdf.cpp" />
+		<Unit filename="../SquiLu-ext/fpdf.h" />
+		<Unit filename="../SquiLu-ext/lua_socket.cpp" />
+		<Unit filename="../SquiLu-ext/lua_socket.h" />
+		<Unit filename="../SquiLu-ext/mongoose.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../ext/mongoose.h" />
-		<Unit filename="../ext/pdf-font.cpp" />
-		<Unit filename="../ext/pdf-font.h" />
-		<Unit filename="../ext/sq_axtls.c">
+		<Unit filename="../SquiLu-ext/mongoose.h" />
+		<Unit filename="../SquiLu-ext/pdf-font.cpp" />
+		<Unit filename="../SquiLu-ext/pdf-font.h" />
+		<Unit filename="../SquiLu-ext/sq_axtls.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../ext/sq_base64.cpp" />
-		<Unit filename="../ext/sq_decimal.cpp" />
-		<Unit filename="../ext/sq_fltk.cpp" />
-		<Unit filename="../ext/sq_fpdf.cpp" />
-		<Unit filename="../ext/sq_fs.c">
+		<Unit filename="../SquiLu-ext/sq_base64.cpp" />
+		<Unit filename="../SquiLu-ext/sq_decimal.cpp" />
+		<Unit filename="../SquiLu-ext/sq_fltk.cpp" />
+		<Unit filename="../SquiLu-ext/sq_fpdf.cpp" />
+		<Unit filename="../SquiLu-ext/sq_fs.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../ext/sq_markdown.cpp" />
-		<Unit filename="../ext/sq_mix.cpp" />
-		<Unit filename="../ext/sq_mongoose.cpp" />
-		<Unit filename="../ext/sq_postgresql.cpp" />
-		<Unit filename="../ext/sq_rs232.c">
+		<Unit filename="../SquiLu-ext/sq_markdown.cpp" />
+		<Unit filename="../SquiLu-ext/sq_mix.cpp" />
+		<Unit filename="../SquiLu-ext/sq_mongoose.cpp" />
+		<Unit filename="../SquiLu-ext/sq_postgresql.cpp" />
+		<Unit filename="../SquiLu-ext/sq_rs232.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../ext/sq_slave_vm.cpp" />
-		<Unit filename="../ext/sq_socket.cpp" />
-		<Unit filename="../ext/sq_sqlite3.cpp" />
-		<Unit filename="../ext/sq_tinyxml2.cpp" />
-		<Unit filename="../ext/sq_zlib.cpp" />
-		<Unit filename="../ext/sq_zmq3.cpp" />
-		<Unit filename="../ext/sqfs.h" />
-		<Unit filename="../ext/sqmodule.h" />
-		<Unit filename="../ext/sqratimport.cpp" />
-		<Unit filename="../ext/sqratimport.h" />
-		<Unit filename="../ext/tinyxml2.cpp" />
-		<Unit filename="../ext/tinyxml2.h" />
-		<Unit filename="../sqstdlib/sqstdaux.cpp" />
-		<Unit filename="../sqstdlib/sqstdblob.cpp" />
-		<Unit filename="../sqstdlib/sqstdblobimpl.h" />
-		<Unit filename="../sqstdlib/sqstdio.cpp" />
-		<Unit filename="../sqstdlib/sqstdlib.dsp" />
-		<Unit filename="../sqstdlib/sqstdmath.cpp" />
-		<Unit filename="../sqstdlib/sqstdrex.cpp" />
-		<Unit filename="../sqstdlib/sqstdstream.cpp" />
-		<Unit filename="../sqstdlib/sqstdstream.h" />
-		<Unit filename="../sqstdlib/sqstdstring.cpp" />
-		<Unit filename="../sqstdlib/sqstdsystem.cpp" />
-		<Unit filename="../squirrel/lua-regex.c">
+		<Unit filename="../SquiLu-ext/sq_slave_vm.cpp" />
+		<Unit filename="../SquiLu-ext/sq_socket.cpp" />
+		<Unit filename="../SquiLu-ext/sq_sqlite3.cpp" />
+		<Unit filename="../SquiLu-ext/sq_tinyxml2.cpp" />
+		<Unit filename="../SquiLu-ext/sq_zlib.cpp" />
+		<Unit filename="../SquiLu-ext/sq_zmq3.cpp" />
+		<Unit filename="../SquiLu-ext/sqfs.h" />
+		<Unit filename="../SquiLu-ext/sqmodule.h" />
+		<Unit filename="../SquiLu-ext/sqratimport.cpp" />
+		<Unit filename="../SquiLu-ext/sqratimport.h" />
+		<Unit filename="../SquiLu-ext/tinyxml2.cpp" />
+		<Unit filename="../SquiLu-ext/tinyxml2.h" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdaux.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdblob.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdblobimpl.h" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdio.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdmath.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdrex.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdstream.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdstream.h" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdstring.cpp" />
+		<Unit filename="../SquiLu/sqstdlib/sqstdsystem.cpp" />
+		<Unit filename="../SquiLu/squirrel/lua-regex.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../squirrel/lua-regex.h" />
-		<Unit filename="../squirrel/sqapi.cpp" />
-		<Unit filename="../squirrel/sqarray.h" />
-		<Unit filename="../squirrel/sqbaselib.cpp" />
-		<Unit filename="../squirrel/sqclass.cpp" />
-		<Unit filename="../squirrel/sqclass.h" />
-		<Unit filename="../squirrel/sqclosure.h" />
-		<Unit filename="../squirrel/sqcompiler.cpp" />
-		<Unit filename="../squirrel/sqcompiler.h" />
-		<Unit filename="../squirrel/sqdebug.cpp" />
-		<Unit filename="../squirrel/sqfuncproto.h" />
-		<Unit filename="../squirrel/sqfuncstate.cpp" />
-		<Unit filename="../squirrel/sqfuncstate.h" />
-		<Unit filename="../squirrel/sqlexer.cpp" />
-		<Unit filename="../squirrel/sqlexer.h" />
-		<Unit filename="../squirrel/sqmem.cpp" />
-		<Unit filename="../squirrel/sqobject.cpp" />
-		<Unit filename="../squirrel/sqobject.h" />
-		<Unit filename="../squirrel/sqopcodes.h" />
-		<Unit filename="../squirrel/sqpcheader.h" />
-		<Unit filename="../squirrel/sqstate.cpp" />
-		<Unit filename="../squirrel/sqstate.h" />
-		<Unit filename="../squirrel/sqstring.h" />
-		<Unit filename="../squirrel/sqtable.cpp" />
-		<Unit filename="../squirrel/sqtable.h" />
-		<Unit filename="../squirrel/squirrel.dsp" />
-		<Unit filename="../squirrel/squserdata.h" />
-		<Unit filename="../squirrel/squtils.h" />
-		<Unit filename="../squirrel/sqvm.cpp" />
-		<Unit filename="../squirrel/sqvm.h" />
-		<Unit filename="../squirrel/sublatin.c">
+		<Unit filename="../SquiLu/squirrel/lua-regex.h" />
+		<Unit filename="../SquiLu/squirrel/sqapi.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqarray.h" />
+		<Unit filename="../SquiLu/squirrel/sqbaselib.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqclass.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqclass.h" />
+		<Unit filename="../SquiLu/squirrel/sqclosure.h" />
+		<Unit filename="../SquiLu/squirrel/sqcompiler.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqcompiler.h" />
+		<Unit filename="../SquiLu/squirrel/sqdebug.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqfuncproto.h" />
+		<Unit filename="../SquiLu/squirrel/sqfuncstate.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqfuncstate.h" />
+		<Unit filename="../SquiLu/squirrel/sqlexer.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqlexer.h" />
+		<Unit filename="../SquiLu/squirrel/sqmem.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqobject.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqobject.h" />
+		<Unit filename="../SquiLu/squirrel/sqopcodes.h" />
+		<Unit filename="../SquiLu/squirrel/sqpcheader.h" />
+		<Unit filename="../SquiLu/squirrel/sqstate.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqstate.h" />
+		<Unit filename="../SquiLu/squirrel/sqstring.h" />
+		<Unit filename="../SquiLu/squirrel/sqtable.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqtable.h" />
+		<Unit filename="../SquiLu/squirrel/squserdata.h" />
+		<Unit filename="../SquiLu/squirrel/squtils.h" />
+		<Unit filename="../SquiLu/squirrel/sqvm.cpp" />
+		<Unit filename="../SquiLu/squirrel/sqvm.h" />
+		<Unit filename="../SquiLu/squirrel/sublatin.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="../squirrel/sublatin.h" />
+		<Unit filename="../SquiLu/squirrel/sublatin.h" />
 		<Unit filename="../../dadbiz++/third-party/sqlite3/sqlite3.c">
 			<Option compilerVar="CC" />
 		</Unit>
