--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -215,7 +215,6 @@
 			<Add directory="include" />
 			<Add directory="sqstdlib" />
 			<Add directory="../myaxtls" />
-			<Add directory="../../dadbiz++/third-party/sqlite3" />
 			<Add directory="../../dadbiz++/third-party/discount-2.1.2" />
 			<Add directory="/usr/include/postgresql" />
 			<Add directory="/usr/lib/jvm/default-java/include" />
@@ -271,6 +270,10 @@
 		<Unit filename="../SquiLu-ext/sq_tinyxml2.cpp" />
 		<Unit filename="../SquiLu-ext/sq_zlib.cpp" />
 		<Unit filename="../SquiLu-ext/sq_zmq3.cpp" />
+		<Unit filename="../SquiLu-ext/sqlite3.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="../SquiLu-ext/sqlite3.h" />
 		<Unit filename="../SquiLu-ext/sqmodule.h" />
 		<Unit filename="../SquiLu-ext/sqratimport.cpp" />
 		<Unit filename="../SquiLu-ext/sqratimport.h" />
@@ -325,10 +328,6 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="squirrel/sublatin.h" />
-		<Unit filename="../../dadbiz++/third-party/sqlite3/sqlite3.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="../../dadbiz++/third-party/sqlite3/sqlite3.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
