More functionality implemented.

--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -107,6 +107,7 @@
 					<Add directory="../fltk" />
 					<Add directory="../third-party/flu" />
 					<Add directory="../libharu/include" />
+					<Add directory="../flu" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
