--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -153,7 +153,7 @@
 					<Add directory="../../dadbiz++/third-party/libharu/include" />
 				</Compiler>
 				<Linker>
-					<Add library="../zeromq-3.2.2/libzmq3.a" />
+					<Add library="../../zeromq-3.2.2/libzmq3.a" />
 					<Add library="pthread" />
 					<Add library="rt" />
 					<Add library="dl" />
